--- a/CistellAissam/appsettings.json
+++ b/CistellAissam/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Database=tiendaaissam;Uid=root;Pwd="
+    "DefaultConnection": "Server=127.0.0.1;Database=tiendaaissam;Uid=root;Pwd=user"
   },
   "Logging": {
     "LogLevel": {
